--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,12 @@ repositories {
 	}
 	maven {
 		url 'https://repository.hanbings.io/proxy'
+
 	}
+			maven {
+				url "https://cursemaven.com"
+			}
+
 }
 loom {
 	splitEnvironmentSourceSets()
@@ -29,6 +34,11 @@ loom {
 	}
 
 }
+fabricApi {
+	configureDataGeneration() {
+		client = true
+	}
+}
 
 dependencies {
 	// To change the versions see the gradle.properties file
@@ -37,7 +47,6 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
 }
 
 processResources {
@@ -80,10 +89,5 @@ publishing {
 	}
 
 	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-	repositories {
-		// Add repositories to publish to here.
-		// Notice: This block does NOT have the same function as the block in the top level.
-		// The repositories here will be used for publishing your artifact, not for
-		// retrieving dependencies.
-	}
+
 }
