--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https://mirrors.aliyun.com/gradle/distributions/v8.14.0-M7/gradle-8.14-milestone-7-bin.zip
+distributionUrl=https://mirrors.aliyun.com/gradle/distributions/v8.14.0-RC3/gradle-8.14-rc-3-bin.zip
 networkTimeout=10000
 validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
