--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '1.10-SNAPSHOT'
+	id 'fabric-loom' version '1.11.0-alpha.26'
 	id 'maven-publish'
 }
 
@@ -9,6 +9,7 @@ group = project.maven_group
 base {
 	archivesName = project.archives_base_name
 }
+
 
 repositories {
 	maven {
@@ -21,6 +22,7 @@ repositories {
 	maven {
 		url 'https://cursemaven.com'
 	}
+    mavenCentral()
 
 }
 loom {
@@ -37,7 +39,8 @@ loom {
 fabricApi {
 	configureDataGeneration() {
 		client = true
-}
+
+	}
 }
 
 dependencies {
@@ -48,7 +51,6 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 }
-
 processResources {
 	inputs.property "version", project.version
 
@@ -67,15 +69,13 @@ java {
 	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 
-	sourceCompatibility = JavaVersion.VERSION_21
-	targetCompatibility = JavaVersion.VERSION_21
 }
 
 jar {
 	inputs.property "archivesName", project.base.archivesName
 
 	from("LICENSE") {
-		rename { "${it}_${inputs.properties.archivesName}"}
+		rename { "${it}_${inputs.properties.archivesName}" }
 	}
 }
 
