--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,9 @@
 pluginManagement {
-	repositories {
-		maven {
-			name = 'Fabric'
-			url = 'https://repository.hanbings.io/proxy'
-		}
-		gradlePluginPortal()
-	}
+    repositories {
+        mavenCentral()
+        maven {
+            name = 'Fabric'
+            url = 'https://repository.hanbings.io/proxy'
+        }
+    }
 }
