--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,13 @@
 pluginManagement {
     repositories {
-        mavenCentral()
         maven {
-            name = 'Fabric'
+            name = 'Hanbings Maven Repository'
             url = 'https://repository.hanbings.io/proxy'
+
         }
+        mavenCentral()
+    }
+    plugins {
+        id 'org.gradle.toolchains.foojay-resolver-convention' version '0.8.0'
     }
 }
